# gemcrew

./: README.md  output.json  pyproject.toml  report.md
src/gemcrew/: crew.py  main.py
src/gemcrew/config/: agents.yaml  tasks.yaml
