[project]
name = "gemcrew"
version = "0.1.0"
description = "gemcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
gemcrew = "gemcrew.main:run"
run_crew = "gemcrew.main:run"
train = "gemcrew.main:train"
replay = "gemcrew.main:replay"
test = "gemcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
